--- a/server/package.json
+++ b/server/package.json
@@ -15,5 +15,8 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "uuid": "^11.0.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
